Fixed scrollbar closing modal.

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 header {
     width:100%;
-    height: 80px;
+    height: 50px;
     z-index:-1000;
     background-color: #35273b;
     margin-bottom: 10px;
